test/syntaxerrors/TestBadConcatenation2.jdc
String hello = "Hello ";
String world = "world";

println(hello world);